Fixed overflow error

--- a/web/style.sass
+++ b/web/style.sass
@@ -16,7 +16,7 @@
 body
   background: #FBF7FA
   font-family: "mytupi", sans-serif
-  // overflow: hidden
+  overflow: hidden
   
   main
     display: flex
